--- a/SentiMate/Base.lproj/Main.storyboard
+++ b/SentiMate/Base.lproj/Main.storyboard
@@ -655,7 +655,7 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NTi-Vt-SQN">
+                                    <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" translatesAutoresizingMaskIntoConstraints="NO" id="NTi-Vt-SQN">
                                         <rect key="frame" x="231.66666666666666" y="38" width="127.33333333333334" height="34.333333333333343"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x8d-Od-YAo">
@@ -705,7 +705,7 @@
                                 <color key="backgroundColor" red="0.96470588239999999" green="0.69411764710000001" blue="0.47843137250000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="cPT-jG-cuU" firstAttribute="top" secondItem="LGH-bo-okl" secondAttribute="top" constant="13" id="5RB-S2-FQq"/>
-                                    <constraint firstItem="NTi-Vt-SQN" firstAttribute="top" secondItem="D9Q-t4-AlK" secondAttribute="bottom" id="67T-lU-muS"/>
+                                    <constraint firstItem="NTi-Vt-SQN" firstAttribute="top" secondItem="J90-Wo-ETv" secondAttribute="top" constant="-9" id="67T-lU-muS"/>
                                     <constraint firstItem="J90-Wo-ETv" firstAttribute="top" secondItem="D9Q-t4-AlK" secondAttribute="bottom" constant="9" id="8ac-sR-A8y"/>
                                     <constraint firstItem="Acs-DQ-bJr" firstAttribute="top" secondItem="D9Q-t4-AlK" secondAttribute="bottom" constant="9" id="F1z-jX-DpU"/>
                                     <constraint firstItem="egS-gH-RP4" firstAttribute="leading" secondItem="D9Q-t4-AlK" secondAttribute="trailing" constant="8" symbolic="YES" id="KcR-XH-aXV"/>
@@ -1004,10 +1004,10 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray4Color">
-            <color red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray5Color">
-            <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
