--- a/SentiMate/Base.lproj/Main.storyboard
+++ b/SentiMate/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qox-vh-Q7d">
-                                                    <rect key="frame" x="20" y="20" width="145" height="212"/>
+                                                    <rect key="frame" x="20" y="12" width="145" height="208"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sad" translatesAutoresizingMaskIntoConstraints="NO" id="acA-AO-gqP">
                                                             <rect key="frame" x="12" y="12" width="40" height="40"/>
@@ -56,34 +56,34 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2024-04-20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7st-U1-qTG">
-                                                            <rect key="frame" x="12" y="56" width="133" height="72"/>
+                                                            <rect key="frame" x="12" y="56" width="133" height="68"/>
                                                             <fontDescription key="fontDescription" name="ChenYuluoyan-Thin" family="Chenyuluoyan" pointSize="14"/>
                                                             <color key="textColor" red="0.2470588235" green="0.2274509804" blue="0.2274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                             <size key="shadowOffset" width="1" height="1"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="因為" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="226-WG-5qA">
-                                                            <rect key="frame" x="12" y="132" width="39.666666666666664" height="34"/>
+                                                            <rect key="frame" x="12" y="128" width="39.666666666666664" height="34"/>
                                                             <fontDescription key="fontDescription" name="ChenYuluoyan-Thin" family="Chenyuluoyan" pointSize="26"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                             <size key="shadowOffset" width="1" height="1"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="類別" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MaV-Be-ZCF">
-                                                            <rect key="frame" x="51.666666666666679" y="132" width="93.333333333333314" height="34"/>
+                                                            <rect key="frame" x="51.666666666666679" y="128" width="93.333333333333314" height="34"/>
                                                             <fontDescription key="fontDescription" name="ChenYuluoyan-Thin" family="Chenyuluoyan" pointSize="26"/>
                                                             <color key="textColor" red="0.41176470588235292" green="0.55294117647058827" blue="0.78823529411764703" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                             <size key="shadowOffset" width="0.0" height="0.0"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="感到" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8SH-lh-7bj">
-                                                            <rect key="frame" x="12" y="166" width="40" height="34"/>
+                                                            <rect key="frame" x="12" y="162" width="40" height="34"/>
                                                             <fontDescription key="fontDescription" name="ChenYuluoyan-Thin" family="Chenyuluoyan" pointSize="26"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="情緒" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GY3-LV-cCM">
-                                                            <rect key="frame" x="52" y="166" width="93" height="34"/>
+                                                            <rect key="frame" x="52" y="162" width="93" height="34"/>
                                                             <fontDescription key="fontDescription" name="ChenYuluoyan-Thin" family="Chenyuluoyan" pointSize="26"/>
                                                             <color key="textColor" red="0.41176470590000003" green="0.55294117649999996" blue="0.78823529410000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -113,8 +113,8 @@
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="qox-vh-Q7d" secondAttribute="bottom" id="ND9-52-fD1"/>
-                                                <constraint firstItem="qox-vh-Q7d" firstAttribute="top" secondItem="gcK-6K-3uF" secondAttribute="top" constant="20" id="SrD-TZ-iGd"/>
+                                                <constraint firstAttribute="bottom" secondItem="qox-vh-Q7d" secondAttribute="bottom" constant="12" id="ND9-52-fD1"/>
+                                                <constraint firstItem="qox-vh-Q7d" firstAttribute="top" secondItem="gcK-6K-3uF" secondAttribute="top" constant="12" id="SrD-TZ-iGd"/>
                                                 <constraint firstItem="qox-vh-Q7d" firstAttribute="leading" secondItem="gcK-6K-3uF" secondAttribute="leading" constant="20" id="TiV-vV-i4P"/>
                                                 <constraint firstAttribute="trailing" secondItem="qox-vh-Q7d" secondAttribute="trailing" constant="20" id="hng-GG-pjl"/>
                                             </constraints>
@@ -229,19 +229,19 @@
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="16" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F71-x6-H4O">
-                                                <rect key="frame" x="35" y="100" width="253" height="457"/>
-                                                <string key="text">今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班</string>
-                                                <fontDescription key="fontDescription" name="ChenYuluoyan-Thin" family="Chenyuluoyan" pointSize="22"/>
+                                                <rect key="frame" x="20" y="99.999999999999986" width="283" height="233.66666666666663"/>
+                                                <string key="text">今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班今天去上班</string>
+                                                <fontDescription key="fontDescription" name="ChenYuluoyan-Thin" family="Chenyuluoyan" pointSize="20"/>
                                                 <color key="textColor" red="0.1764705882" green="0.1960784314" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" red="0.93333333330000001" green="0.8862745098" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstItem="F71-x6-H4O" firstAttribute="leading" secondItem="xcj-jI-g57" secondAttribute="leading" constant="35" id="7vd-4U-p3b"/>
+                                            <constraint firstItem="F71-x6-H4O" firstAttribute="leading" secondItem="xcj-jI-g57" secondAttribute="leading" constant="20" id="7vd-4U-p3b"/>
                                             <constraint firstItem="F71-x6-H4O" firstAttribute="top" secondItem="9qh-aB-GeK" secondAttribute="bottom" constant="20" id="Ccp-oi-S30"/>
                                             <constraint firstItem="9qh-aB-GeK" firstAttribute="centerX" secondItem="xcj-jI-g57" secondAttribute="centerX" id="JW3-1Q-xrc"/>
-                                            <constraint firstAttribute="trailing" secondItem="F71-x6-H4O" secondAttribute="trailing" constant="35" id="OC2-E7-UFf"/>
+                                            <constraint firstAttribute="trailing" secondItem="F71-x6-H4O" secondAttribute="trailing" constant="20" id="OC2-E7-UFf"/>
                                             <constraint firstItem="9qh-aB-GeK" firstAttribute="top" secondItem="xcj-jI-g57" secondAttribute="top" constant="30" id="Zfl-wH-dOq"/>
                                         </constraints>
                                     </view>
@@ -613,13 +613,13 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="3tA-nb-o8O">
                                                     <rect key="frame" x="88" y="12.000000000000004" width="293" height="46.333333333333343"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Somewhere in The Night" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kSu-rj-biy">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Somewhere in The Night" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kSu-rj-biy">
                                                             <rect key="frame" x="0.0" y="0.0" width="293" height="22.666666666666668"/>
                                                             <fontDescription key="fontDescription" name="PingFangTC-Semibold" family="PingFang TC" pointSize="16"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The Billy Bauer Quartets" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W35-7U-8IT">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="The Billy Bauer Quartets" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W35-7U-8IT">
                                                             <rect key="frame" x="0.0" y="26.666666666666664" width="293" height="19.666666666666664"/>
                                                             <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="14"/>
                                                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1044,10 +1044,10 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray4Color">
-            <color red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray5Color">
-            <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
